--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,9 +2,11 @@
 
 %html
   %head
-    %title Feast
-    = stylesheet_link_tag "application"
+    %title Nulogy Epic BBQ
+    = stylesheet_link_tag 'application'
 
   %body
-    = yield
-    = javascript_include_tag "application"
+    = image_tag 'barbeque.jpg'
+    #content
+      = yield
+    = javascript_include_tag 'application'
