--- a/app/assets/stylesheets/site.sass
+++ b/app/assets/stylesheets/site.sass
@@ -37,7 +37,7 @@ img
   @include linear-gradient(white, #ffe9e5)
   :margin auto
   :padding 20px
-  // :background-color hsl(0,0,95%)
+  :margin-bottom 25px
   :border 3px dashed #5e2416
   :width 90%
   :max-width 950px
