getting the basic workflow going

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,14 +2,11 @@
 
 %html
   %head
-    %title Nulogy Epic BBQ
+    %title Epic Nulogy BBQ
     = stylesheet_link_tag 'application'
 
   %body
     = image_tag 'barbeque.jpg'
-    %ul
-      %li
-
 
     #content
       = yield
