--- a/app/views/orders/_errors.html.haml
+++ b/app/views/orders/_errors.html.haml
@@ -4,5 +4,5 @@
       #{pluralize(@order.errors.count, "error")} prohibited this order from being saved:
 
     %ul
-      = @order.errors.full_messages.each do |msg|
+      - @order.errors.full_messages.each do |msg|
         %li= msg
