--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -15,4 +15,4 @@
     - @previous_orders.each do |order|
       %li
         = order.description
-        %span= order.created_at
+        %span.secondary-info.right= order.created_at
