--- a/app/assets/stylesheets/site.sass
+++ b/app/assets/stylesheets/site.sass
@@ -32,6 +32,28 @@ img
   @include box-shadow(0px 0px 4px #AAA)
   :border-bottom 2px solid #5e2416
 
+.sign-in
+  :margin-top 200px
+  :line-height 48px
+  :text-align center
+
+  img
+    :border-bottom 0px
+    :vertical-align middle
+    :line-height 48px
+
+  a
+    :vertical-align middle
+    :text-decoration none
+    :line-height 48px
+
+  &:hover
+    :cursor pointer
+
+    a
+      :text-decoration underline
+
+
 #content
   @include border-radius(10px)
   @include linear-gradient(white, #ffe9e5)
@@ -70,3 +92,7 @@ img
   :color #444
   :font-size 0.7em
   :line-height 1.05em
+
+  &.right
+    :float right
+    :line-height 30px
