--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     = stylesheet_link_tag 'application'
 
   %body
-    = image_tag 'barbeque.jpg'
+    = image_tag 'barbeque.jpg', class: 'header'
 
     #content
       = yield
