--- a/app/views/orders/_form.html.haml
+++ b/app/views/orders/_form.html.haml
@@ -24,7 +24,7 @@
       .secondary-info
         (ex. freezies, popsicles etc.) - Funded by Nulogy pending approval (before purchase)
 
-    = f.text_field "Special Order"
+    = f.text_area "Special Order"
 
   %fieldset
     %legend
